...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/item_note_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
...
                app:layout_constraintEnd_toEndOf="@+id/item_note_title"
                app:layout_constraintStart_toStartOf="@+id/item_note_title"
                app:layout_constraintTop_toBottomOf="@+id/item_note_title"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/item_note_updatedBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
...
